refactor: simplify service description and remove outdated details

--- a/app/terms/page.mdx
+++ b/app/terms/page.mdx
@@ -6,7 +6,7 @@ By using **DNS.Surf**, you agree to the following Terms of Service:
 By accessing or using **DNS.Surf**, you agree to be bound by these Terms of Service. If you do not agree to these terms, please refrain from using the website.
 
 2. Service Description
-**DNS.Surf** is a DNS query website that allows users to explore DNS resolution results in different regions. It offers resolution services from 18 regions and provides over 100 optional DNS resolvers. The website is hosted on Vercel, ensuring stable and efficient service.
+**DNS.Surf** is a DNS query website that allows users to explore DNS resolution results in different regions. It offers resolution services from different regions and provides over 100 optional DNS resolvers.
 
 3. Copyright
 The copyright of **DNS.Surf** belongs to [HTML.ZONE](https://html.zone/). All content, including but not limited to text, graphics, logos, button icons, images, audio clips, digital downloads, data compilations, and software, is the property of [HTML.ZONE](https://html.zone/) and is protected by international copyright laws.
