feat: add canonical URL

--- a/app/(docs)/privacy/page.mdx
+++ b/app/(docs)/privacy/page.mdx
@@ -1,3 +1,9 @@
+export const metadata = {
+  alternates: {
+    canonical: process.env.NEXT_PUBLIC_SITE_URL ? `${process.env.NEXT_PUBLIC_SITE_URL}/privacy` : undefined,
+  },
+}
+
 # Privacy Policy
 
 At **DNS.Surf**, your privacy is of utmost importance to us. We want you to use our services with confidence, knowing that we prioritize the protection of your personal information. Therefore, we assure you that we do not collect or store any user information. It is akin to enjoying the breathtaking scenery during your travels without any concerns about personal information leakage.
