--- a/app/(docs)/terms/page.mdx
+++ b/app/(docs)/terms/page.mdx
@@ -1,3 +1,9 @@
+export const metadata = {
+  alternates: {
+    canonical: process.env.NEXT_PUBLIC_SITE_URL ? `${process.env.NEXT_PUBLIC_SITE_URL}/terms` : undefined,
+  },
+}
+
 # Terms of Service
 
 By using **DNS.Surf**, you agree to the following Terms of Service:
